Archive2/0b/7de076335d6ddc/output
In file included from main.cpp:2:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.2.0/../../../../include/c++/5.2.0/type_traits:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.2.0/../../../../include/c++/5.2.0/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:10:21: error: no member named 'is_convertible' in namespace 'std'
    bool b2a = std::is_convertible<B*, A*>::value;
               ~~~~~^
main.cpp:10:36: error: 'B' does not refer to a value
    bool b2a = std::is_convertible<B*, A*>::value;
                                   ^
main.cpp:7:11: note: declared here
    class B : public A {};
          ^
main.cpp:10:38: error: expected expression
    bool b2a = std::is_convertible<B*, A*>::value;
                                     ^
main.cpp:10:41: error: expected ';' at end of declaration
    bool b2a = std::is_convertible<B*, A*>::value;
                                        ^
                                        ;
main.cpp:11:21: error: no member named 'is_convertible' in namespace 'std'
    bool a2b = std::is_convertible<A*, B*>::value;
               ~~~~~^
main.cpp:11:38: error: expected expression
    bool a2b = std::is_convertible<A*, B*>::value;
                                     ^
main.cpp:11:41: error: expected ';' at end of declaration
    bool a2b = std::is_convertible<A*, B*>::value;
                                        ^
                                        ;
main.cpp:12:21: error: no member named 'is_convertible' in namespace 'std'
    bool b2c = std::is_convertible<B*, C*>::value;
               ~~~~~^
main.cpp:12:38: error: expected expression
    bool b2c = std::is_convertible<B*, C*>::value;
                                     ^
main.cpp:12:41: error: expected ';' at end of declaration
    bool b2c = std::is_convertible<B*, C*>::value;
                                        ^
                                        ;
main.cpp:18:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
12 errors generated.
